Actions
Bug #9865
closedfrozen IO object causes RuntimeError with inspect and fileno
Bug #9865:
frozen IO object causes RuntimeError with inspect and fileno
Status:
Closed
Assignee:
-
Target version:
-
ruby -v:
ruby 2.2.0dev (2014-05-27 trunk 46150) [x86_64-linux]
Backport:
Description
IO object を freeze すると、inspect や fileno が RuntimeError になるんですが、
これはよろしくないんじゃないかと思います。
% ./ruby -e 'f = open("."); f.freeze; p f'
-e:1:in `inspect': can't modify frozen File (RuntimeError)
from -e:1:in `p'
from -e:1:in `<main>'
% ./ruby -e 'f = open("."); f.freeze; p f.fileno'
-e:1:in `fileno': can't modify frozen File (RuntimeError)
from -e:1:in `<main>'
% ./ruby -v
ruby 2.2.0dev (2014-05-27 trunk 46150) [x86_64-linux]
あるいは、なにか理由がありましたっけ?
Updated by nobu (Nobuyoshi Nakada) about 12 years ago
- Status changed from Open to Closed
- % Done changed from 0 to 100
Applied in changeset r46151.
io.c: no error on frozen IO
- io.c (rb_io_fileno, rb_io_inspect): non-modification does not
error on frozen IO. [ruby-dev:48241] [Bug #9865]
Updated by usa (Usaku NAKAMURA) about 12 years ago
- Backport changed from 2.0.0: UNKNOWN, 2.1: UNKNOWN to 2.0.0: REQUIRED, 2.1: REQUIRED
Updated by nagachika (Tomoyuki Chikanaga) about 12 years ago
- Backport changed from 2.0.0: REQUIRED, 2.1: REQUIRED to 2.0.0: REQUIRED, 2.1: DONE
r46151 and r46165 (partially) were backported into ruby_2_1 branch at r47140.
Updated by usa (Usaku NAKAMURA) almost 12 years ago
- Backport changed from 2.0.0: REQUIRED, 2.1: DONE to 2.0.0: DONE, 2.1: DONE
backported into ruby_2_0_0 at r37368.
note: respect existing security checks on this version.
Actions