io.c: no error on frozen IO

* io.c (rb_io_fileno, rb_io_inspect): non-modification does not
  error on frozen IO.  [ruby-dev:48241] [Bug #9865]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@46151 b2dd03c8-39d4-4d8f-98ff-823fe69b080e